fixed overflow problem

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
   font-weight: 400;
   font-style: normal;
   background: #fff;
+  overflow: visible !important;
 }
 .container {
   max-width: 1400px;
